--- a/notebooks/Coordinate Transformation.ipynb
+++ b/notebooks/Coordinate Transformation.ipynb
@@ -4,10 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MSeeker\\Desktop\\Vision2018-RL\n"
+     ]
+    }
+   ],
    "source": [
+    "%cd ..\n",
     "from skeletrack.io import read_skeleton_file\n",
-    "body_info = read_skeleton_file('S001C001P001R001A010.skeleton')"
+    "body_info = read_skeleton_file('dataset/S017C003P020R002A010.skeleton')"
    ]
   },
   {
@@ -1437,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
