--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MSeeker\\Desktop\\Vision2018-RL\n"
+      "/beegfs/xg703/Vision2018-RL\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "%cd ..\n",
     "import numpy as np\n",
     "from skeletrack.io import read_skeleton_file\n",
-    "body_info = read_skeleton_file('dataset/S017C003P020R002A010.skeleton')"
+    "body_info = read_skeleton_file('dataset/raw/clapping/S001C001P001R001A010.skeleton')"
    ]
   },
   {
@@ -30,11 +30,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from skeletrack.preprocessing import preprocess\n",
-    "preprocess(body_info)"
+    "preprocess(body_info, gamma=0.95, is_clapping=True)"
    ]
   },
   {
@@ -77,82 +79,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.016627</td>\n",
-       "      <td>-0.058339</td>\n",
-       "      <td>-0.040835</td>\n",
-       "      <td>0.002771</td>\n",
-       "      <td>0.006289</td>\n",
-       "      <td>-0.003137</td>\n",
-       "      <td>-0.002828</td>\n",
-       "      <td>-0.006641</td>\n",
-       "      <td>0.003350</td>\n",
+       "      <td>1.008033</td>\n",
+       "      <td>-0.122525</td>\n",
+       "      <td>-0.059198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000023</td>\n",
+       "      <td>-0.000325</td>\n",
+       "      <td>0.000022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.507791</td>\n",
-       "      <td>-0.018399</td>\n",
-       "      <td>-0.029268</td>\n",
-       "      <td>0.001932</td>\n",
-       "      <td>0.003858</td>\n",
-       "      <td>-0.002363</td>\n",
-       "      <td>-0.001969</td>\n",
-       "      <td>-0.003950</td>\n",
-       "      <td>0.002549</td>\n",
+       "      <td>0.501079</td>\n",
+       "      <td>-0.065888</td>\n",
+       "      <td>-0.041108</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>-0.000177</td>\n",
+       "      <td>0.000039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.174645</td>\n",
-       "      <td>0.090009</td>\n",
-       "      <td>0.027824</td>\n",
-       "      <td>-0.001813</td>\n",
-       "      <td>-0.001221</td>\n",
-       "      <td>-0.002795</td>\n",
-       "      <td>0.004428</td>\n",
-       "      <td>-0.000034</td>\n",
-       "      <td>0.001949</td>\n",
+       "      <td>-0.265429</td>\n",
+       "      <td>-0.065333</td>\n",
+       "      <td>0.018349</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000179</td>\n",
+       "      <td>0.000143</td>\n",
+       "      <td>-0.000244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.170911</td>\n",
-       "      <td>-0.223088</td>\n",
-       "      <td>0.038829</td>\n",
-       "      <td>0.003329</td>\n",
-       "      <td>0.002675</td>\n",
-       "      <td>0.007530</td>\n",
-       "      <td>-0.002100</td>\n",
-       "      <td>-0.003341</td>\n",
-       "      <td>-0.012010</td>\n",
+       "      <td>0.182357</td>\n",
+       "      <td>-0.319248</td>\n",
+       "      <td>-0.037038</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000680</td>\n",
+       "      <td>-0.000056</td>\n",
+       "      <td>-0.000322</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         v1        v2        v3        d1        d2        d3        a1  \\\n",
-       "0  1.016627 -0.058339 -0.040835  0.002771  0.006289 -0.003137 -0.002828   \n",
-       "1  0.507791 -0.018399 -0.029268  0.001932  0.003858 -0.002363 -0.001969   \n",
-       "2  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3 -0.174645  0.090009  0.027824 -0.001813 -0.001221 -0.002795  0.004428   \n",
-       "4  0.170911 -0.223088  0.038829  0.003329  0.002675  0.007530 -0.002100   \n",
-       "\n",
-       "         a2        a3  \n",
-       "0 -0.006641  0.003350  \n",
-       "1 -0.003950  0.002549  \n",
-       "2  0.000000  0.000000  \n",
-       "3 -0.000034  0.001949  \n",
-       "4 -0.003341 -0.012010  "
+       "         v1        v2        v3   d1   d2   d3        a1        a2        a3\n",
+       "0  1.008033 -0.122525 -0.059198  0.0  0.0  0.0 -0.000023 -0.000325  0.000022\n",
+       "1  0.501079 -0.065888 -0.041108  0.0  0.0  0.0 -0.000002 -0.000177  0.000039\n",
+       "2  0.000000  0.000000  0.000000  0.0  0.0  0.0  0.000000  0.000000  0.000000\n",
+       "3 -0.265429 -0.065333  0.018349  0.0  0.0  0.0  0.000179  0.000143 -0.000244\n",
+       "4  0.182357 -0.319248 -0.037038  0.0  0.0  0.0  0.000680 -0.000056 -0.000322"
       ]
      },
      "execution_count": 3,
@@ -161,9 +156,29 @@
     }
    ],
    "source": [
-    "body_info[3][0].joints[\n",
+    "body_info[0][0].joints[\n",
     "    ['v1','v2','v3','d1','d2','d3','a1','a2','a3']\n",
     "].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02903546361765786"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "body_info[0][0].weight"
    ]
   },
   {
@@ -177,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,13 +247,6 @@
     "        athis = body_info[i][j].joints[['a1', 'a2', 'a3']]\n",
     "        assert np.all(np.isclose(vnext + vprev - 2*vthis, athis))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
