--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "24 -7.053864e-03 -1.729839e-02  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,11 +769,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Batch preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "from progressbar import progressbar\n",
+    "Npositives = 100\n",
+    "Nnegatives = 100\n",
+    "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preprocess positive (clapping) examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path('dataset/raw/clapping/')\n",
+    "skfiles = np.array(list(path.iterdir()))\n",
+    "np.random.shuffle(skfiles)\n",
+    "skfiles = skfiles[:Npositives]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 76% (76 of 100) |#################      | Elapsed Time: 0:00:32 ETA:   0:00:09"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem preprocessing  dataset/raw/clapping/S004C002P008R001A010.skeleton\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100% (100 of 100) |######################| Elapsed Time: 0:00:41 Time:  0:00:41\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xs = []\n",
+    "Ys = []\n",
+    "for skfile in progressbar(skfiles, redirect_stdout=True):\n",
+    "    try: # some files contain appearing/disappearing bodies and should be discarded\n",
+    "        bodyinfo = read_skeleton_file(skfile)\n",
+    "        preprocess(bodyinfo, gamma=0.95, is_clapping=True)\n",
+    "        X, Y = extract_feature_labels(bodyinfo)\n",
+    "        Xs.append(X)\n",
+    "        Ys.append(Y)\n",
+    "    except:\n",
+    "        print(\"Problem preprocessing \", skfile)\n",
+    "X = np.vstack(Xs)\n",
+    "Y = np.vstack(Ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"dataset/processed/X_clapping.npy\", X)\n",
+    "np.save(\"dataset/processed/Y_clapping.npy\", Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Preprocess negative (non-clapping) examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path('dataset/raw/not-clapping/')\n",
+    "skfiles = np.array(list(path.iterdir()))\n",
+    "np.random.shuffle(skfiles)\n",
+    "skfiles = skfiles[:Nnegatives]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 26% (26 of 100) |#####                  | Elapsed Time: 0:00:15 ETA:   0:00:47"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem preprocessing  dataset/raw/not-clapping/S008C003P008R002A053.skeleton\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 46% (46 of 100) |##########             | Elapsed Time: 0:00:27 ETA:   0:00:33"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem preprocessing  dataset/raw/not-clapping/S002C003P010R002A053.skeleton\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91% (91 of 100) |####################   | Elapsed Time: 0:00:54 ETA:   0:00:05"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem preprocessing  dataset/raw/not-clapping/S006C003P017R001A060.skeleton\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100% (100 of 100) |######################| Elapsed Time: 0:00:59 Time:  0:00:59\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xs = []\n",
+    "Ys = []\n",
+    "for skfile in progressbar(skfiles, redirect_stdout=True):\n",
+    "    try: # some files contain appearing/disappearing bodies and should be discarded\n",
+    "        bodyinfo = read_skeleton_file(skfile)\n",
+    "        preprocess(bodyinfo, gamma=0.95, is_clapping=False)\n",
+    "        X, Y = extract_feature_labels(bodyinfo)\n",
+    "        Xs.append(X)\n",
+    "        Ys.append(Y)\n",
+    "    except:\n",
+    "        print(\"Problem preprocessing \", skfile)\n",
+    "X = np.vstack(Xs)\n",
+    "Y = np.vstack(Ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"dataset/processed/X_not_clapping.npy\", X)\n",
+    "np.save(\"dataset/processed/Y_not_clapping.npy\", Y)"
+   ]
   }
  ],
  "metadata": {
