--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -784,8 +784,8 @@
    "source": [
     "from pathlib import Path\n",
     "from progressbar import progressbar\n",
-    "Npositives = 100\n",
-    "Nnegatives = 100\n",
+    "Npositives = 200\n",
+    "Nnegatives = 200\n",
     "np.random.seed(0)"
    ]
   },
@@ -817,28 +817,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 76% (76 of 100) |#################      | Elapsed Time: 0:00:32 ETA:   0:00:09"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem preprocessing  dataset/raw/clapping/S004C002P008R001A010.skeleton\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100% (100 of 100) |######################| Elapsed Time: 0:00:41 Time:  0:00:41\n"
+      "100% (200 of 200) |######################| Elapsed Time: 0:01:23 Time:  0:01:23\n"
      ]
     }
    ],
    "source": [
     "Xs = []\n",
     "Ys = []\n",
-    "for skfile in progressbar(skfiles, redirect_stdout=True):\n",
+    "for skfile in progressbar(skfiles):\n",
     "    try: # some files contain appearing/disappearing bodies and should be discarded\n",
     "        bodyinfo = read_skeleton_file(skfile)\n",
     "        preprocess(bodyinfo, gamma=0.95, is_clapping=True)\n",
@@ -846,14 +832,14 @@
     "        Xs.append(X)\n",
     "        Ys.append(Y)\n",
     "    except:\n",
-    "        print(\"Problem preprocessing \", skfile)\n",
+    "        pass\n",
     "X = np.vstack(Xs)\n",
     "Y = np.vstack(Ys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,63 +868,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 26% (26 of 100) |#####                  | Elapsed Time: 0:00:15 ETA:   0:00:47"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem preprocessing  dataset/raw/not-clapping/S008C003P008R002A053.skeleton\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46% (46 of 100) |##########             | Elapsed Time: 0:00:27 ETA:   0:00:33"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem preprocessing  dataset/raw/not-clapping/S002C003P010R002A053.skeleton\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 91% (91 of 100) |####################   | Elapsed Time: 0:00:54 ETA:   0:00:05"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem preprocessing  dataset/raw/not-clapping/S006C003P017R001A060.skeleton\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100% (100 of 100) |######################| Elapsed Time: 0:00:59 Time:  0:00:59\n"
+      "100% (200 of 200) |######################| Elapsed Time: 0:01:54 Time:  0:01:54\n"
      ]
     }
    ],
    "source": [
     "Xs = []\n",
     "Ys = []\n",
-    "for skfile in progressbar(skfiles, redirect_stdout=True):\n",
+    "for skfile in progressbar(skfiles):\n",
     "    try: # some files contain appearing/disappearing bodies and should be discarded\n",
     "        bodyinfo = read_skeleton_file(skfile)\n",
     "        preprocess(bodyinfo, gamma=0.95, is_clapping=False)\n",
@@ -946,14 +890,14 @@
     "        Xs.append(X)\n",
     "        Ys.append(Y)\n",
     "    except:\n",
-    "        print(\"Problem preprocessing \", skfile)\n",
+    "        pass\n",
     "X = np.vstack(Xs)\n",
     "Y = np.vstack(Ys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
