--- a/notebooks/Model.ipynb
+++ b/notebooks/Model.ipynb
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "(16550, 78)"
+       "(32668, 78)"
       ]
      },
      "execution_count": 4,
@@ -113,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "(16550, 40)"
+       "(32668, 40)"
       ]
      },
      "execution_count": 5,
@@ -134,28 +134,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 14895 samples, validate on 1655 samples\n",
+      "Train on 29401 samples, validate on 3267 samples\n",
       "Epoch 1/5\n",
-      "14895/14895 [==============================] - 3s 171us/step - loss: 0.0016 - val_loss: 0.0012\n",
+      "29401/29401 [==============================] - 4s 125us/step - loss: 0.0058 - val_loss: 0.0041\n",
       "Epoch 2/5\n",
-      "14895/14895 [==============================] - 1s 84us/step - loss: 0.0014 - val_loss: 0.0010\n",
+      "29401/29401 [==============================] - 2s 83us/step - loss: 0.0053 - val_loss: 0.0038\n",
       "Epoch 3/5\n",
-      "14895/14895 [==============================] - 1s 85us/step - loss: 0.0013 - val_loss: 9.6856e-04\n",
+      "29401/29401 [==============================] - 3s 85us/step - loss: 0.0051 - val_loss: 0.0037\n",
       "Epoch 4/5\n",
-      "14895/14895 [==============================] - 1s 85us/step - loss: 0.0013 - val_loss: 9.2034e-04\n",
+      "29401/29401 [==============================] - 2s 84us/step - loss: 0.0050 - val_loss: 0.0036\n",
       "Epoch 5/5\n",
-      "14895/14895 [==============================] - 1s 84us/step - loss: 0.0012 - val_loss: 8.8620e-04\n"
+      "29401/29401 [==============================] - 2s 84us/step - loss: 0.0050 - val_loss: 0.0036\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2b4e7ed46dd8>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
